# InnoVenture

./: README.md
InnoVenture/: .env  .gitignore  README.md  pyproject.toml  streamlit_app.py
InnoVenture/src/innoventure/: crew.py  main.py
InnoVenture/src/innoventure/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/components/: Chatbot.tsx  PdfUpload.tsx
