[project]
name = "innoventure"
version = "0.1.0"
description = "InnoVenture using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
innoventure = "innoventure.main:run"
run_crew = "innoventure.main:run"
train = "innoventure.main:train"
replay = "innoventure.main:replay"
test = "innoventure.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
